# game_2

./: .gitignore  CMakeLists.txt  run.sh
src/: Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
